# supermariohd

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.txt  build.sh  readme.md
.github/workflows/: linux-build.yml  win32-build.yml  win64-build.yml
cmake/: SFML3.cmake  TinyXML2.cmake
include/: Blocks.h  Enemies.h  GameEngine.h  Geometry.h  Items.h  Mario.h  Pickups.h  SuperMarioGame.h  TileMap.h
res/Levels/: CastleToUg.tmx  Sk1.tmx  Sk2.tmx  Sk3.tmx  Sk4.tmx  Tiles.tsx  Ug1.tmx  Ug2.tmx  Ug3.tmx  Ug4.tmx  Ug5.tmx  UgToCastle.tmx  Uw1.tmx  Uw2.tmx  WORLD 1-1.tmx  WORLD 1-2.tmx  WORLD 1-3.tmx  WORLD 1-4.tmx  WORLD 2-1.tmx  WORLD 2-2.tmx  WORLD 2-3.tmx  WORLD 2-4.tmx  WORLD 3-1.tmx  WORLD 3-2.tmx  WORLD 3-3.tmx  WORLD 3-4.tmx  WORLD 4-1.tmx  WORLD 4-2.tmx  WORLD 4-3.tmx  WORLD 4-4.tmx  WORLD 5-1.tmx  WORLD 5-2.tmx  WORLD 5-3.tmx  WORLD 5-4.tmx  WORLD 6-1.tmx  WORLD 6-2.tmx  presets.tmx
source/: Blocks.cpp  Blocks.h  Blocks.hpp  Character.hpp  Enemies.cpp  Enemies.h  Enemies.hpp  GameEngine.cpp  GameEngine.h  GameEngine.hpp  Geometry.cpp  Geometry.h  Items.cpp  Items.hpp  Mario.cpp  Mario.hpp  Pickups.cpp  Pickups.hpp  SuperMarioGame.cpp  SuperMarioGame.h  SuperMarioGame.hpp  TileMap.h  TileMap.hpp  main.cpp
source/enemies/: Blooper.cpp  Blooper.hpp  Bowser.cpp  Bowser.hpp  BulletBill.cpp  BulletBill.hpp  BuzzyBeetle.cpp  BuzzyBeetle.hpp  CheepCheep.cpp  CheepCheep.hpp  Enemies.hpp  Enemy.cpp  Enemy.hpp  Fireball.cpp  Fireball.hpp  Goomba.cpp  Goomba.hpp  HammerBro.cpp  HammerBro.hpp  Koopa.cpp  Koopa.hpp  Lakity.cpp  Lakity.hpp  PiranhaPlant.cpp  PiranhaPlant.hpp  Podoboo.cpp  Podoboo.hpp
source/game_framework/: CMakeLists.txt  Collisions.cpp  Collisions.hpp  GameObject.cpp  GameObject.hpp  InputManager.cpp  InputManager.hpp  Logger.cpp  Logger.hpp  Property.cpp  Property.hpp  Rect.cpp  Rect.hpp  ResourceManager.hpp  StateMachine.cpp  StateMachine.hpp  TimerManager.cpp  TimerManager.hpp  Vector.cpp  Vector.hpp
source/game_framework/utils/: Format.cpp  Format.hpp  RTIIX.hpp
source/pickups/: Coin.cpp  Coin.hpp  Fireflower.cpp  Fireflower.hpp  Mushroom.cpp  Mushroom.hpp  Pickups.hpp  Star.cpp  Star.hpp
source/utils/: Format.cpp  Format.hpp
src/: Blocks.cpp  Enemies.cpp  GameEngine.cpp  Geometry.cpp  Items.cpp  Main.cpp  Mario.cpp  Pickups.cpp  SuperMarioGame.cpp
